syntax = "proto3";

package location;

service LocationService {
  rpc UpdateLocation (LocationRequest) returns (LocationResponse);
  rpc GetLocation (EmailRequest) returns (LocationResponse);
  rpc GetAllLocations (Empty) returns (LocationsList);
}

message Empty {}

message EmailRequest {
  string email = 1;
}

message LocationRequest {
  string email = 1;
  double latitude = 2;
  double longitude = 3;
}

message LocationResponse {
  string email = 1;
  double latitude = 2;
  double longitude = 3;
  string updatedAt = 4;
  string status = 5;
  string message = 6;
}

message LocationsList {
  repeated LocationResponse locations = 1;
}
